@@ -1,7 +1,7 @@
 package com.src.common.util;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+//import sun.misc.BASE64Decoder;
+//import sun.misc.BASE64Encoder;
 
 import javax.crypto.*;
 import javax.crypto.spec.SecretKeySpec;
@@ -10,6 +10,7 @@ import java.io.UnsupportedEncodingException;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
 import java.security.SecureRandom;
+import java.util.Base64;
 
 /**
  * AES加解密工具类
@@ -55,7 +56,8 @@ public class AESUtil {
             //这里用Base64Encoder中会找不到包
             //解决办法：
             //在项目的Build path中先移除JRE System Library，再添加库JRE System Library，重新编译后就一切正常了。
-            String aesEncode = new String(new BASE64Encoder().encode(byteAES));
+            String aesEncode = Base64.getEncoder().encodeToString(byteAES);
+//            String aesEncode = new String(new BASE64Encoder().encode(byteAES));
             //11.去掉换行符(大坑,AES 超过一定长度会自动换行)
             aesEncode = aesEncode.replaceAll("[\\s*\t\n\r]", "");
             //11.将字符串返回
@@ -104,7 +106,8 @@ public class AESUtil {
             //7.初始化密码器，第一个参数为加密(Encrypt_mode)或者解密(Decrypt_mode)操作，第二个参数为使用的KEY
             cipher.init(Cipher.DECRYPT_MODE, key);
             //8.将加密并编码后的内容解码成字节数组
-            byte[] byteContent = new BASE64Decoder().decodeBuffer(content);
+            byte[] byteContent = Base64.getDecoder().decode(content);
+//            byte[] byteContent = new BASE64Decoder().decodeBuffer(content);
             /*
              * 解密
              */
